--- a/Portfolio/portfolio.ipynb
+++ b/Portfolio/portfolio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.iloc[:, :20]"
+    "sector_mapper = {\n",
+    "        \"GOOG\": \"tech\",\n",
+    "        \"AAPL\": \"tech\",\n",
+    "        \"FB\": \"tech\",\n",
+    "        \"AMZN\": \"tech\",\n",
+    "        \"BABA\": \"tech\",\n",
+    "        \"GE\": \"utility\",\n",
+    "        \"AMD\": \"tech\",\n",
+    "        \"WMT\": \"retail\",\n",
+    "        \"BAC\": \"fig\",\n",
+    "        \"GM\": \"auto\",\n",
+    "        \"T\": \"auto\",\n",
+    "        \"UAA\": \"airline\",\n",
+    "        \"SHLD\": \"retail\",\n",
+    "        \"XOM\": \"energy\",\n",
+    "        \"RRC\": \"energy\",\n",
+    "        \"BBY\": \"retail\",\n",
+    "        \"MA\": \"fig\",\n",
+    "        \"PFE\": \"pharma\",\n",
+    "        \"JPM\": \"fig\",\n",
+    "        \"SBUX\": \"retail\",\n",
+    "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = df.iloc[:, :20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +73,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tech = mu.iloc[[0,1,2,3,4,6]]\n",
+    "utility = mu.iloc[[5]]\n",
+    "retail = mu.iloc[[7, 12, 15, 19]]\n",
+    "fig = mu.iloc[[8, 16, 18]]\n",
+    "auto = mu.iloc[[9,10]]\n",
+    "airline = mu.iloc[[11]]\n",
+    "energy = mu.iloc[[13, 14]]\n",
+    "pharma = mu.iloc[[17]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PFE    0.226718\n",
+       "XOM    0.143051\n",
+       "RRC    0.073636\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([pharma,energy])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +141,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +731,7 @@
        "SBUX  0.025124  0.045453  0.019480  0.021844  0.044845  0.139059  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,27 +742,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_return = (0.05 * mu.iloc[0] + 0.01*max(utility) +0.01*max(airline) + (1- 0.05 - 0.01  - 0.01)*max(mu))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "max expected at least 1 argument, got 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[74], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m max_return \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m0.05\u001b[39m \u001b[38;5;241m*\u001b[39m mu\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m0.2\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.05\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(tech)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0.1\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(utility)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0.2\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(retail)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0.4\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(fig)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0.05\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(airline)) \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0.2\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(energy) \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.2\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.1\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.2\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.4\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.05\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.2\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: max expected at least 1 argument, got 0"
+     ]
+    }
+   ],
+   "source": [
+    "max_return = (0.05 * mu.iloc[0] + (0.2-0.05)*max(tech)+0.1*max(utility)+0.2*max(retail)+0.4*max(fig)+0.05*max(airline)) +0.2*max(energy) + (1 - 0.2 - 0.1 - 0.2 - 0.4 - 0.05 - 0.2)*max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32075321581485505"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3203248977661133\n"
+      "2.100224018096924\n"
      ]
     }
    ],
    "source": [
     "from pypfopt.efficient_frontier import EfficientFrontier\n",
     "import time\n",
+    "sector_upper = {\n",
+    "        \"tech\": 0.2,\n",
+    "        \"utility\": 0.1,\n",
+    "        \"retail\": 0.2,\n",
+    "        \"fig\": 0.4,\n",
+    "        \"airline\": 0.05,\n",
+    "        \"energy\": 0.2}\n",
+    "sector_lower = {\"utility\": 0.01, \"fig\": 0.02, \"airline\": 0.01}\n",
     "\n",
     "ef = EfficientFrontier(mu, S)\n",
+    "ef.add_sector_constraints(sector_mapper, sector_lower, sector_upper)\n",
+    "ef.add_constraint(lambda x: x[0] == 0.05)\n",
+    "ef.add_constraint(lambda x: x[0] == 0.1)\n",
     "start = time.time()\n",
     "ds = []\n",
-    "for s in np.arange(0.0, 0.3, 0.001):\n",
-    "\tweights = ef.efficient_return(s)\n",
-    "\tds.append((s, [w/1 for w in list(weights.values())]))\n",
+    "for rho in np.arange(0.001, 1.0, 0.001):\n",
+    "\tweights = ef.max_quadratic_utility(rho)\n",
+    "\tds.append((2*rho - 1, [w for w in list(weights.values())]))\n",
     "end = time.time()\n",
     "\n",
     "print(end-start)"
@@ -701,61 +831,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.000000002534297"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01583719253540039\n"
+     ]
     }
    ],
    "source": [
-    "sum(ds[-1][1])"
+    "print(end-start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-7.495764987e-07,\n",
-       " 0.0142005801879303,\n",
-       " 0.3489533751045085,\n",
-       " 0.2438116489895936,\n",
-       " 0.0248915608353791,\n",
-       " -2.6787595927e-06,\n",
-       " -6.150275657e-06,\n",
-       " -2.0336966961e-06,\n",
-       " -4.5312740182e-06,\n",
-       " -2.5066730052e-06,\n",
-       " -2.4705931037e-06,\n",
-       " -2.8005648341e-06,\n",
-       " -5.6502467578e-06,\n",
-       " -2.0066792417e-06,\n",
-       " -4.1893709696e-06,\n",
-       " -2.0720839603e-06,\n",
-       " 0.3464121961806306,\n",
-       " 0.0217736269491573,\n",
-       " -3.4911765166e-06,\n",
-       " -1.6547420509e-06]"
+       "(-0.998,\n",
+       " [0.05,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.15,\n",
+       "  0.01,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.01,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.2,\n",
+       "  0.4,\n",
+       "  0.1799999999999998,\n",
+       "  0.0,\n",
+       "  0.0])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds[-1][1]"
+    "ds[0]"
    ]
   },
   {
