--- a/MPC/mpc.ipynb
+++ b/MPC/mpc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,27 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6616579958930349"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.rand()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,13 +88,15 @@
     "\tconstraints = [u <= np.ones(n), -u <= np.zeros(n), (A*x_0 +B@u) <= np.ones(n), -(A*x_0 +B@u) <= np.zeros(n)]\n",
     "\tprob = cp.Problem(cp.Minimize(cp.quad_form(A*x_0 +B@u - x_ref, I) + cp.quad_form(u, L)), constraints)\n",
     "\tprob.solve()\n",
-    "\tif prob.status == 'optimal': ds.append([2*(a - a_min)/a_var -1, 2*(b - b_min)/b_var - 1, 2*(r - r_min)/r_var - 1, 2*(x_0-x_0_min)/x_0_var-1, 2*(x_ref[0]-x_ref_min)/x_ref_var -1, u.value])\n",
+    "\tif prob.status == 'optimal': \n",
+    "\t\tX = np.array([2*(a - a_min)/a_var -1, 2*(b - b_min)/b_var - 1, 2*(r - r_min)/r_var - 1, 2*(x_0-x_0_min)/x_0_var-1, 2*(x_ref[0]-x_ref_min)/x_ref_var -1])\n",
+    "\t\tds.append([X, u.value])\n",
     "\t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.725948976566948"
+       "0.39363552027744664"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,22 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.9202288972185162,\n",
-       " 0.15518107716736582,\n",
-       " 0.5385141780849052,\n",
-       " 0.5377646842039625,\n",
-       " 0.201663488626724,\n",
-       " array([-4.80585138e-23, -4.34888012e-23,  1.53503014e-23, -8.71038338e-24,\n",
-       "         5.95637922e-24])]"
+       "[array([-0.25091976,  0.90142861,  0.46398788,  0.19731697, -0.68796272]),\n",
+       " array([-1.91062765e-23,  8.59048854e-24, -4.32526161e-23, -2.38765867e-23,\n",
+       "        -1.23418140e-23,  9.32580229e-03,  2.80529280e-02,  3.52331447e-02,\n",
+       "         3.39629952e-02,  2.36947145e-02])]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,16 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.32147005, 0.29758109, 0.26733772, 0.22033252, 0.14038995])"
+       "array([ 5.79305138e-23,  3.02001989e-23,  5.80117435e-23,  2.57773545e-24,\n",
+       "       -3.31000664e-24, -4.34200912e-24, -7.21154871e-24, -3.70132630e-24,\n",
+       "       -1.82119434e-25,  2.47927123e-04])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +189,7 @@
        "'optimal'"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +324,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[133], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kkt_loss(\u001b[43msol\u001b[49m, lambda_, mu, nu, rho, t, t_ref, a, b, torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;241m1\u001b[39m), pen)\n",
+      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kkt_loss(\u001b[43msol\u001b[49m, lambda_, mu, nu, rho, t, t_ref, a, b, torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;241m1\u001b[39m), pen)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'sol' is not defined"
      ]
     }
