--- a/Projection/projection.ipynb
+++ b/Projection/projection.ipynb
@@ -7,7 +7,18 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cvxpy as cp"
+    "import cvxpy as cp\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(42)     # python random generator\n",
+    "np.random.seed(42)  # numpy random generator"
    ]
   },
   {
