--- a/Preprint/Preprint.qmd
+++ b/Preprint/Preprint.qmd
@@ -34,7 +34,7 @@ format:
         fig-format: svg
         fig-align: center
         fig.width: 6
-        fig.asp: 0.8
+        fig.asp: 0.618
         knitr:
             opts_chunk:
                 fig-asp: 0.618
@@ -91,6 +91,7 @@ Assume differentiable cost and constraints functions and that $g_i$ satisfies Sl
     \nabla_{x^*} f(x^*, \theta) + \sum\nolimits_{i=1}^m \lambda^*_i\nabla_{x^*} g_i(x^*, \theta) + A(\theta)^T\nu^* = 0 &
 \end{align}
 ```
+# State of the art
 # Proposed method
 
 
@@ -100,7 +101,8 @@ Assume differentiable cost and constraints functions and that $g_i$ satisfies Sl
 KKT-Informed Neural Network (KINN) builds upon the principles of Physics-Informed Neural Networks (PINNs) [@raissiPhysicsinformedNeuralNetworks2019a], inducing compliance with Karush-Kuhn-Tucker (KKT) through a learning bias, directly coding their violation into the loss function that will be minimized in the training phase.
 
 
-The objective is to process a batch of $B$ problem parameters $\Theta \in \mathbb{R}^{B \times k}$, $\Theta_i = \theta^{(i)}$ and have as output $\hat{X}$, $\hat\Lambda$, $\hat{N}$. Assuming to know the range of feasibility of each parameter, $\Theta$ will be scaled in order to obtain $\Theta^\prime \in [-1 , 1]^{B \times k}$ which will be used to fed the network, aiding the convergence. network architecture is shown in @fig-architecture. An embedding for $\Theta^\prime$ is learned through a MLP, where each layer has a skip connection to the previous one. This embedding is then used as input to three MLPs, predicting respectively $\hat{X}$, $\hat\Lambda$, $\hat{N}$. A softplus function is applied to the network predicting $\hat\Lambda$ to ensure its feasibility.
+The objective is to process a batch of $B$ problem parameters $\Theta \in \mathbb{R}^{B \times k}$, $\Theta_i = \theta^{(i)}$ and produce the outputs $\hat{X}$, $\hat\Lambda$, $\hat{N}$.
+Assuming that the range of each parameter is known a priori, $\Theta$  is linearly scaled to obtain a normalized parameter batch $\Theta^\prime \in [-1 , 1]^{B \times k}$ , which serves as the input to the neural network to facilitate numerical stability and enhance convergence during training. The network architecture consists of a Multi-Layer Perceptron (MLP) with skip connections, which produces a shared embedding of the scaled parameter batch $\Theta^\prime$. This shared embedding is then used as input to three separate MLPs, each tasked with predicting one of the outputs: the optimal primal variables $\hat{X}$ and the dual variables $\hat{\Lambda}$, $\hat{N}$. The shared embedding ensures that the network captures the common structure of the parameter space, while the individual MLPs specialize in their respective prediction tasks, thereby improving both training efficiency and model accuracy. To ensure feasibility, a softplus activation function is applied to $\hat{\Lambda}$.
 
 ```{=tex}
 \begin{align}
@@ -131,16 +133,28 @@ where:
 ```
 
 This vector-valued loss function is minimized through a Jacobian descent [@quintonJacobianDescentMultiObjective2024a]. Let $\mathcal{J} \in \mathbb{R}^{P\times4}$ the Jacobian matrix of $\mathcal{L}$, with $P$ the number of parameters of the KINN, $\mathcal{A}: \mathbb{R}^{P\times4} \to \mathbb{R}^{P}$ is called aggregator. The "direction" of the update of networks parameters will be $\mathcal{A}(\mathcal{J})$. The aggregator chosen is $\mathcal{A}_{\mathrm{UPGrad}}$, described in [@quintonJacobianDescentMultiObjective2024a]. 
-
+{{< pagebreak >}}
 # Case studies
+## Portfolio optimization
+### Problem description
+### Experimental results
+#### Training
+#### Evaluation
 
-## Projection onto a convex polythope
-A renewable energy generator in a power grid is used as a test case for this approach.. The generator's active and reactive power injections $(P,Q)$ are controllable, but they must adhere to physical constraints. As such, the desired setpoints $(a_P, a_Q)$ must be projected onto the feasible set defined by these constraints. This problem is taken from [@henryGymANMReinforcementLearning2021].
+## Model predictive control
+### Problem description
+### Experimental results
+#### Training
+#### Evaluation
+
+
+## Projection onto a convex polytope
+A renewable energy generator in a power grid is used as a test case for this approach. The generator's active and reactive power injections $(P,Q)$ are controllable, but they must adhere to physical constraints. As such, the desired setpoints $(a_P, a_Q)$ must be projected onto the feasible set defined by these constraints. This problem is taken from [@henryGymANMReinforcementLearning2021].
 
 ### Problem description
-The feasible set $\mathcal{D}$ (shown in Figure $\ref{fig:set}$) is defined by the physical parameters of the generator $\overline{P}_g \in \mathbb{R}_0^+$, $P^+_g \in ]0, \overline{P}_g]$, $\overline{Q}_g \in \mathbb{R}_0^+$, $Q^+_g \in ]0, \overline{Q}_g]$, characterizing the minimum and maximum possible values and the relationships between active and reactive power, and the dynamic value $P^{\textrm{(max)}}_{g,t}$ which indicates the maximum power that can be generated at that time given the external conditions (e.g. wind speed, solar radiation, etc.):
+The feasible set $\mathcal{D}$ (shown in Figure $\ref{fig:set}$) is defined by the physical parameters of the generator $\overline{P}_g \in \mathbb{R}_0^+$, $P^+_g \in ]0, \overline{P}_g]$, $\overline{Q}_g \in \mathbb{R}_0^+$, $Q^+_g \in ]0, \overline{Q}_g]$, characterizing the minimum and maximum possible values, the relationships between active and reactive power, and the dynamic value $P^{\textrm{(max)}}_{g,t}$ which indicates the maximum power that can be generated at that time given the external conditions (e.g. wind speed, solar radiation, etc.):
 \begin{equation}
-\mathcal{D} = \{(P, Q) \in \mathbb{R}² | 0 \leq P \leq P^{\textrm{(max)}}_{g,t}, -\overline{Q}_g \leq Q \leq \overline{Q}_g, Q \leq \tau^{(1)}_g P + \rho_g^{(1)}, Q \geq \tau^{(2)}_g P + \rho_g^{(2)}\}
+\mathcal{D} = \{(P, Q) \in \mathbb{R}^2 | 0 \leq P \leq P^{\textrm{(max)}}_{g,t}, -\overline{Q}_g \leq Q \leq \overline{Q}_g, Q \leq \tau^{(1)}_g P + \rho_g^{(1)}, Q \geq \tau^{(2)}_g P + \rho_g^{(2)}\}
 \end{equation}
 
 where:
@@ -241,15 +255,26 @@ With associated KKT conditions:
 The problem described has a two-dimensional optimization variable, seven scalar parameters and seven constraints:
 
 \begin{equation}
- [\hat{X}, \hat\Lambda] = \mathrm{KINN}(\Theta)
+ [\hat{X}, \hat\Lambda] = \mathrm{KINN}(\Theta^\prime)
 \end{equation}
 
 with: 
 \begin{align}
-\Theta \in \mathbb{R}^{B \times 7}, \quad&\Theta_{i} = (a_P^{(i)}, a_Q^{(i)},\overline{P}_g^{(i)},  P_g^{+^{(i)}}, \overline{Q}_g^{(i)},  Q_g^{+^{(i)}}, P^{\textrm{(max)}^{(i)}}_{g,t})\\
+\Theta^\prime \in \mathbb{R}^{B \times 7}, \quad&\Theta^\prime_{i} = (a_P^{(i)}, a_Q^{(i)},\overline{P}_g^{(i)},  P_g^{+^{(i)}}, \overline{Q}_g^{(i)},  Q_g^{+^{(i)}}, P^{\textrm{(max)}^{(i)}}_{g,t})\\
 \hat{X} \in \mathbb{R}^{B \times 2}, \quad&\hat{X}_{i} = \hat{x}^{(i)} = (\hat{P}^{(i)}, \hat{Q}^{(i)})\\
 \hat\Lambda \in \mathbb{R}_+^{0^{B \times 7}}, \quad&\hat\Lambda_{i} = \hat\lambda^{(i)}
 \end{align}
+
+| Parameter            | Range  |
+|:---------------:|:------:|
+| $a_P$ | $[0 ,1]$ |
+| $a_Q$ | $[-1 ,1]$ |
+| $\overline{P}_g$ | $[0.2 ,0.8]$ |
+| $P_g^{+}$ | $[0 ,\overline{P}_g]$ |
+| $\overline{Q}_g$ | $[0.2 ,0.8]$ |
+| $Q_g^{+}$ | $[0 ,\overline{Q}_g]$ |
+| $P^{\textrm{(max)}}_{g}$ | $[0 ,\overline{P}_g]$ |
+: Parameters range {#tbl-proj-parameters}
 
 The network is composed by three hidden layers of $512$ neurons each, with a LeakyReLU (negative slope of $0.01$) as activation function and a skip connection around each hidden layer.  
 
@@ -306,6 +331,7 @@ library(GGally)
 library(akima)
 library(hrbrthemes)
 library(extrafont)
+library(latex2exp)
 
 
 ```
@@ -326,20 +352,35 @@ ggplot(log_df, aes(x=Step, y=Value, color=Loss)) + geom_line()   + scale_y_conti
 
 
 ```{r}
+#| label: fig-params
+#| echo: false
+#| fig-cap: "Loss terms during training"
+#| fig-asp: 1.0
+#| fig-width: 10
+#| out-width: "100%"
 params_df <- read_csv("../Projection/param_analysis.csv", show_col_types=FALSE)
-
-#ggplot(df, aes(x=x, y=y, fill=z)) + geom_tile()  + theme_minimal()
 ggally_mysmooth <- function(data, mapping, ...){
     vars = unique(unlist(lapply(mapping, all.vars)))
     grid <- with(data, interp(x = data[[vars[1]]], y = data[[vars[2]]], z = data[[vars[3]]], linear = TRUE, extrap = FALSE,
-                            xo = seq(-1, 1, length = 100), 
-                            yo = seq(-1, 1, length = 100)))
+                            xo = seq(min(data[[vars[1]]]), max(data[[vars[1]]]), length = 10), 
+                            yo = seq(min(data[[vars[2]]]), max(data[[vars[2]]]), length = 10)))
 
     df <- as.data.frame(interp2xyz(grid))
-    ggplot(data = df, mapping=aes(x,y,fill=z)) +geom_raster(interpolate=TRUE, show.legend=TRUE)  +  scale_fill_gradient2_tableau(palette = "Orange-Blue Diverging", transform=c("log10", "reverse")) + theme_classic()
+    ggplot(data = df, mapping=aes(x,y, fill=z)) +geom_raster(interpolate=TRUE, show.legend=TRUE)   +  scale_fill_gradient2_tableau(palette = "Orange-Blue Diverging", transform=c("log10", "reverse"), guide=guide_colourbar(reverse = TRUE), name = "Residuals sum") + theme_light() 
 }
-ggpairs(params_df, mapping=aes(fill=sum),columns = 2:8, upper = list(continuous = "blank"), diag = list(continuous = "blankDiag"), lower = list(continuous = ggally_mysmooth), legend=8) + theme(legend.position="bottom")
+ggpairs(params_df, mapping=aes(fill=sum),columns = 1:7, upper = list(continuous = "blank"), diag = list(continuous = "blankDiag"), lower = list(continuous = ggally_mysmooth), legend = 8, columnLabels = c("a[P]", "a[Q]", "P[g * list(, ) * t]^{
+    (max)
+}", "bar(
+    P
+)[g]", "bar(Q)[g]", "P[g]^{
+    phantom() + phantom()
+}","Q[g]^{
+    phantom() + phantom()
+}"), labeller = "label_parsed") + theme(legend.position="bottom") + theme_classic() + theme(axis.line = element_blank(), panel.border = element_blank(),
+          panel.grid.major = element_blank(),
+          panel.grid.minor = element_blank())
 ```
+
 #### Evaluation
 
 To evaluate the approach presented here, the “cvxpylayers” library [@agrawalDifferentiableConvexOptimization2019a], which implements a batched solver via multi-threading, was used as a baseline. The validation set consists of 1000 samples, generated by taking the physical parameters of the two generators present in the use case presented in [@henryGymANMReinforcementLearning2021] and, for each of them, simulating 500 random inputs $(a_P, a_Q)$ and external condition $P^{\textrm{(max)}}_{g,t}$. Specifically these parameters are:
